<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_background"
    tools:context=".Activities.GameActivity">
<!--    android:backgroundTint="#0FFFFFFF"-->


<!--Not functioning properly-->
<!--    <Button-->
<!--        android:id="@+id/undoTurn"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="45dp"-->
<!--        android:backgroundTint="#A1A7AF"-->
<!--        android:fontFamily="@font/syncopate"-->
<!--        android:text="Undo Turn"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.077" />-->

    <Button
        android:id="@+id/menu"
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:layout_marginTop="31dp"
        android:backgroundTint="#A1A7AF"
        android:fontFamily="@font/syncopate"
        android:text="Menu"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/gameP2Name"
        android:layout_width="201dp"
        android:layout_height="72dp"
        android:layout_marginBottom="1dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/gameP1Name"
        android:layout_width="200dp"
        android:layout_height="72dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/playerTurn"
        android:layout_width="333dp"
        android:layout_height="62dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/syncopate_bold"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/GameOverText"
        android:layout_width="333dp"
        android:layout_height="62dp"
        android:fontFamily="@font/syncopate"
        android:textAlignment="center"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/restartText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/restartText"
        android:layout_width="333dp"
        android:layout_height="62dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/syncopate"
        android:textSize="24dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
