...
            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="0"
                android:contentDescription="Back Button"
                android:padding="0dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/histroyscreenbutton" />

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
...
