...
            <androidx.legacy.widget.Space
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="0" />

            <ImageButton
                android:id="@+id/returnBtn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="Backbutton"
                android:padding="0dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/informationscreenbutton" />

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
...
